fix font not showing up on mobile devices and safari 2

--- a/client/src/sass/_variables.scss
+++ b/client/src/sass/_variables.scss
@@ -13,7 +13,9 @@ $luxora: "Luxora Grotesk", sans-serif;
 
 @font-face {
   font-family: $luxora;
-  src: url("../assets/fonts/LuxoraGrotesk-Bold.woff2") format("woff2");
+  src: url("../assets/fonts/LuxoraGrotesk-Bold.woff2") format("woff2"),
+    url("../assets/fonts/LuxoraGrotesk-Bold.woff") format("woff"),
+    url("../assets/fonts/LuxoraGrotesk-Bold.ttf") format("truetype");
   font-weight: normal;
   font-style: normal;
 }
